Bugfixing squish issue

--- a/tilegame/css/control-panel.css
+++ b/tilegame/css/control-panel.css
@@ -67,7 +67,7 @@
 }
 
 .customiser-button {
-  width: min(50px, 25%);
+  width: 25px;
   aspect-ratio: 1;
   padding: 0;
   margin-top: 5px;
@@ -198,10 +198,6 @@
   .control-panel-tc {
     top: auto !important;
     bottom: 0 !important;
-  }
-
-  .customiser-button {
-    width: 50px;
   }
 
   .score-boost {
